Reorganize files for multiple services
